// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <Button
    active={false}
    block={false}
    className=""
    context="default"
    disabled={false}
    key=".0"
    shape="square"
    size="md"
    type="button"
  >
    <div />
  </Button>
</Default__StyledSpan>
`;

exports[`When using snapshots on an anchor typed Button Should render with an element children 1`] = `
<Default__StyledSpan>
  <Button
    active={false}
    block={false}
    className=""
    context="default"
    disabled={false}
    key=".0"
    shape="square"
    size="md"
    type="anchor"
  >
    <div />
  </Button>
</Default__StyledSpan>
`;
